--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/style.css">
   
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
 
@@ -16,19 +17,39 @@
 </head>
 <body>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
+  <article>
+    <section class="selected">
+      <div class="content-text">
+        <h1>
+          “ I’ve been interested in coding for a while but never taken the jump, until now. 
+          I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
+          excited about the future. ”
+        </h1>
+        <div class="profile">
+          <strong>Tanya Sinclair</strong>
+          <small>UX Engineer</small>
+        </div>
+      </div>
 
-  Tanya Sinclair
-  UX Engineer
+      <div class="content-image">
+        <img src="./images/image-tanya.jpg" alt="profile-pic"/>
+      </div>
 
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer
+    </section>
+  
+    <section>
+      <h1>
+        “ If you want to lay the best foundation possible I’d recommend taking this course. 
+        The depth the instructors go into is incredible. I now feel so confident about 
+        starting up as a professional developer. ”
+      </h1>
+    
+      <div>
+        John Tarkpor
+        Junior Front-end Developer
+      </div>
+    </section>
+  </article>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
