--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 
   <article>
-    <section class="selected">
+
+    <section class="item selected">
       <div class="content-text">
         <h1>
           “ I’ve been interested in coding for a while but never taken the jump, until now. 
@@ -28,27 +29,75 @@
 
       <div class="content-image">
         <img src="./images/image-tanya.jpg" alt="profile-pic"/>
+        <div class="navigation">
+          <a href="#" class="btn-prev" rel="noopener noreferrer">
+            <img src="./images/icon-prev.svg" alt="">
+          </a>
+          <a href="#" class="btn-next" rel="noopener noreferrer">
+            <img src="./images/icon-next.svg" alt="">
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="item">
+      <div class="content-text">
+        <h1>
+          “ If you want to lay the best foundation possible I’d recommend taking this course. 
+          The depth the instructors go into is incredible. I now feel so confident about 
+          starting up as a professional developer. ”
+        </h1>
+        <div class="profile">
+          <strong>John Tarkpor</strong>
+          <small>Junior Front-end Developer</small>
+        </div>
       </div>
 
-    </section>
-  
-    <section>
-      <h1>
-        “ If you want to lay the best foundation possible I’d recommend taking this course. 
-        The depth the instructors go into is incredible. I now feel so confident about 
-        starting up as a professional developer. ”
-      </h1>
-    
-      <div>
-        John Tarkpor
-        Junior Front-end Developer
+      <div class="content-image">
+        <img src="./images/image-john.jpg" alt="profile-pic"/>
+        <div class="navigation">
+          <a href="#" class="btn-prev" rel="noopener noreferrer">
+            <img src="./images/icon-prev.svg" alt="">
+          </a>
+          <a href="#" class="btn-next" rel="noopener noreferrer">
+            <img src="./images/icon-next.svg" alt="">
+          </a>
+        </div>
       </div>
     </section>
+
   </article>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/LizzardMedeiros" target="_blank">LizzardMedeiros</a>.
   </div>
+
+  <script>
+    const btnPrev = document.querySelectorAll('.btn-prev');
+    const btnNext = document.querySelectorAll('.btn-next');
+    const itemArray = document.querySelectorAll('.item');
+    let sel = 0;
+
+    btnPrev.forEach(btn => {
+      btn.addEventListener('click', function() {
+        if(sel === 0) return;
+        itemArray[sel].classList.remove('selected');
+        itemArray[sel].previousElementSibling.classList.add('selected');
+        sel--;
+      });
+    })
+
+    btnNext.forEach(btn => {
+      btn.addEventListener('click', function() {
+        if(sel === itemArray.length - 1) return;
+        itemArray[sel].classList.remove('selected');
+        itemArray[sel].nextElementSibling.classList.add('selected');
+        sel++;
+      });
+    });
+
+
+  </script>
 </body>
 </html>
