--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </div>
 
       <div class="content-image">
-        <img src="./images/image-tanya.jpg" class="profile-pic" alt="profile-pic"/>
+        <img src="./images/image-tanya.jpg" class="profile-pic" alt="profile pic"/>
         <div class="navigation">
           <a href="#" class="btn-prev" rel="noopener noreferrer">
-            <img src="./images/icon-prev.svg" alt="button previous">
+            <img src="./images/icon-prev.svg" alt="Previous button">
           </a>
           <a href="#" class="btn-next" rel="noopener noreferrer">
-            <img src="./images/icon-next.svg" alt="button next">
+            <img src="./images/icon-next.svg" alt="Next button">
           </a>
         </div>
       </div>
@@ -56,13 +56,13 @@
       </div>
 
       <div class="content-image">
-        <img src="./images/image-john.jpg" class="profile-pic" alt="profile-pic"/>
+        <img src="./images/image-john.jpg" class="profile-pic" alt="profile pic"/>
         <div class="navigation">
           <a href="#" class="btn-prev" rel="noopener noreferrer">
-            <img src="./images/icon-prev.svg" alt="">
+            <img src="./images/icon-prev.svg" alt="Previous button">
           </a>
           <a href="#" class="btn-next" rel="noopener noreferrer">
-            <img src="./images/icon-next.svg" alt="">
+            <img src="./images/icon-next.svg" alt="Next button">
           </a>
         </div>
       </div>
