--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <section class="item selected">
       <div class="content-text">
-        <h1>
+        <h2>
           “ I’ve been interested in coding for a while but never taken the jump, until now. 
           I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
           excited about the future. ”
-        </h1>
+        </h2>
         <div class="profile">
           <strong>Tanya Sinclair</strong>
           <small>UX Engineer</small>
@@ -30,13 +30,13 @@
       </div>
 
       <div class="content-image">
-        <img src="./images/image-tanya.jpg" class="profile-pic" alt="profile-pic"/>
+        <img src="./images/image-tanya.jpg" class="profile-pic" alt="profile pic"/>
         <div class="navigation">
           <a href="#" class="btn-prev" rel="noopener noreferrer">
-            <img src="./images/icon-prev.svg" alt="">
+            <img src="./images/icon-prev.svg" alt="Previous button">
           </a>
           <a href="#" class="btn-next" rel="noopener noreferrer">
-            <img src="./images/icon-next.svg" alt="">
+            <img src="./images/icon-next.svg" alt="Next button">
           </a>
         </div>
       </div>
@@ -44,11 +44,11 @@
 
     <section class="item">
       <div class="content-text">
-        <h1>
+        <h2>
           “ If you want to lay the best foundation possible I’d recommend taking this course. 
           The depth the instructors go into is incredible. I now feel so confident about 
           starting up as a professional developer. ”
-        </h1>
+        </h2>
         <div class="profile">
           <strong>John Tarkpor</strong>
           <small>Junior Front-end Developer</small>
@@ -56,13 +56,13 @@
       </div>
 
       <div class="content-image">
-        <img src="./images/image-john.jpg" class="profile-pic" alt="profile-pic"/>
+        <img src="./images/image-john.jpg" class="profile-pic" alt="profile pic"/>
         <div class="navigation">
           <a href="#" class="btn-prev" rel="noopener noreferrer">
-            <img src="./images/icon-prev.svg" alt="">
+            <img src="./images/icon-prev.svg" alt="Previous button">
           </a>
           <a href="#" class="btn-next" rel="noopener noreferrer">
-            <img src="./images/icon-next.svg" alt="">
+            <img src="./images/icon-next.svg" alt="Next button">
           </a>
         </div>
       </div>
